fix tx.id overflow small devices

--- a/src/aoWebWallet/wwwroot/css/app.css
+++ b/src/aoWebWallet/wwwroot/css/app.css
@@ -188,4 +188,11 @@ button.mud-button-root.mud-icon-button.mud-ripple.mud-ripple-icon.copy-clipboard
     font-size: 1.7rem;
 }
 
+.tx-wrap {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    display: block;
+}
+
 
